Changelog
~~~~~~~~~~

hepixvmitrust-0.0.15

    * Added new command line option to set the version number of the image.

hepixvmitrust-0.0.14
    * Improved README text added some details about install mechanism.
    * Cleaned up typos in README.
    * Added better logging on loading structure from JSON.
    * Fixed a small bug referencing non existent object. 
    
hepixvmitrust-0.0.13
    * Added Apache License Version 2.0
    * Spelling Corrections to README
    * Updated documentation of Image list format in README.
    
hepixvmitrust-0.0.12

    * Removed an API regresion.

hepixvmitrust-0.0.11

    * Updated to new image format, including a valid header.
    * Allows using signed image lists as templates as well as JSON.
    * Default field values can be set with environment variables.

hepixvmitrust-0.0.10

Use python standard logging library.
Decode the correct data format.
    Still output the old incorrect format for this release.
        After hepixvmitrust-0.0.11 thsi will be corrected.
Small cleanup to signing code.
Added a minimal.py example generating imagelist with minimal code.
Added documentation on using minimal.py
Updated documentation to show the new image format.
Added documentation on how to deploy your image list once generated.
Added thsi changelog.



2011-03-31 17:55 Ian Gable <igable@uvic.ca>

	* vmilistool.py: renamed to vmilisttool, and had the reusable
	  classes pushed into the new python module hepixvmtrust

	* setup.py: tweak name of the excutable, add PyPI classifiers,
	  import the version number from __version__

	* hepixvmitrust/vmitrustlib.py: new python module containing the classes
	  that were in vmilisttool.py

	* hepixvmitrust/__init__.py: load the VMTrustControler object
	  automatically

	* hepixvmitrust/__version__.py: stardard file to store the module
	  version number

	* testing.py: new file with testing functions pulled from vmilisttool

2011-03-07 18:03  omsynge
