@@ -1,5 +1,5 @@
 include README.md
-include vmilisttool.py
+include vmilisttool
 include ChangeLog
 include imagelist.json
 include minimal.py
